# documind-backend

./: README.md  pyproject.toml  pyrightconfig.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  architecture_diagram.excalidraw  dependencies.md  docker-compose.yml  pyproject.toml
backend/ollama/: pull-models.sh
backend/src/documind_backend/: config.py  main.py
backend/src/documind_backend/api/: configuration.py  documents.py  ingest.py  query.py
backend/src/documind_backend/core/chains/: rag_chain.py
backend/src/documind_backend/core/graph/: agent.py
backend/src/documind_backend/core/ingestion/: loaders.py  splitters.py
backend/src/documind_backend/core/retrieval/: retrievers.py  (+1 more)
backend/src/documind_backend/models/: schemas.py
backend/test/: DocuMind_API.postman_collection.json
backend/test/data/: Model_Testing_QA.md  architecture_guide.md  aws_test_details.md  contract_terms.txt  employee_handbook.docx
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/docudeep/: page.tsx
client/components/: sidebar.tsx  upload-dialog.tsx  url-ingest-dialog.tsx
client/components/chat/: chat-input.tsx  chat-message.tsx  chat-view.tsx  document-panel.tsx
client/components/docudeep/: docudeep-view.tsx  source-card.tsx
client/lib/: api.ts  types.ts
scripts/: smoke.sh
src/documind_backend/: config.py  main.py
src/documind_backend/core/chains/: rag_chain.py
src/documind_backend/core/graph/: agent.py
src/documind_backend/core/ingestion/: loaders.py  splitters.py
src/documind_backend/core/retrieval/: retrievers.py  vectorstore.py
src/documind_backend/models/: schemas.py
